Оформление формы. Шаг 2.

--- a/source/index.html
+++ b/source/index.html
@@ -300,7 +300,7 @@
                 <p class="companion__tags">
                   #ЗОЖ #ПП #Фитнес #пляж #авокадо #смузи
                 </p>
-                <ul class="companion__transport transport list">
+                <ul class="companion__transport transport transport--companion list">
                   <li class="transport__item transport__item--active tooltip" data-tooltip="Авиаперелет">
                     <svg class="transport__svg" width="21" height="21" aria-hidden="true" focusable="false">
                       <use xlink:href="img/sprite.svg#icon-plane"></use>
