--- a/source/blank.html
+++ b/source/blank.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Сервис поиска попутчиков для путешествий</title>
+  <link rel="preload" href="fonts/bloggersans.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/bloggersans-bold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/bloggersans-light.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/bloggersans-medium.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="page__body body">
@@ -99,21 +103,23 @@
       </ul>
     </div>
   </header>
-  <main class="page__main main">
-    <div class="container">
-      <div style="height: 300px; padding: 50px; text-align: center;">
-        <p class="title title--medium title--theme-sky" style="margin: 0 0 20px;">
-          Контент временно недоступен!
-        </p>
-        <p style="font-size: 20px;" class="title title--theme-sky">
-          Приносим извинения за доставленные неудобства.
-          Вы можете вернуться на
-          <a href="index.html">
-            главную
-          </a>
-          страницу.
-        </p>
-      </div>
+  <main class="page__main main" style="display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 50vw;">
+    <div class="container" style="text-align: center;
+    margin: 100px 0;">
+      <p class="title title--medium title--theme-sky" style="margin: 0 0 20px;">
+        Контент временно недоступен!
+      </p>
+      <p style="font-size: 20px;" class="title title--theme-sky">
+        Приносим извинения за доставленные неудобства.
+        Вы можете вернуться на
+        <a href="index.html" style="text-transform: uppercase;">
+          главную
+        </a>
+        страницу.
+      </p>
     </div>
   </main>
   <footer class="footer">
