Доработал логику nojs + решил проблему с перестроением сетки на медиазапросах с учетом ширины вертикального скролла

--- a/source/blank.html
+++ b/source/blank.html
@@ -103,7 +103,7 @@
       </ul>
     </div>
   </header>
-  <main class="page__main main" style="display: flex;
+  <main class="page__main main main--nojs main--nojs-blank" style="display: flex;
   justify-content: center;
   align-items: center;
   min-height: 50vw;">
