--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1596,8 +1596,11 @@
                 </div>
               </div>
               <p class="card__likes">
-                <button class="card__likes-button card__likes-button--active button" type="button"></button>
-                <span class="visually-hidden">Снять лайк</span>
+                <button class="card__likes-button card__likes-button--active button" type="button">
+                  <span class="visually-hidden">
+                    Снять лайк
+                  </span>
+                </button>
                 <span class="card__likes-number">
                   1,5 М
                 </span>
@@ -1708,8 +1711,11 @@
                 </div>
               </div>
               <p class="card__likes">
-                <button class="card__likes-button card__likes-button--inactive button" type="button"></button>
-                <span class="visually-hidden">Поставить лайк</span>
+                <button class="card__likes-button card__likes-button--inactive button" type="button">
+                  <span class="visually-hidden">
+                    Поставить лайк
+                  </span>
+                </button>
                 <span class="card__likes-number">
                   1500
                 </span>
@@ -1826,8 +1832,11 @@
                 </div>
               </div>
               <p class="card__likes">
-                <button class="card__likes-button card__likes-button--inactive button" type="button"></button>
-                <span class="visually-hidden">Поставить лайк</span>
+                <button class="card__likes-button card__likes-button--inactive button" type="button">
+                  <span class="visually-hidden">
+                    Поставить лайк
+                  </span>
+                </button>
                 <span class="card__likes-number">
                   170
                 </span>
@@ -1938,8 +1947,11 @@
                 </div>
               </div>
               <p class="card__likes">
-                <button class="card__likes-button card__likes-button--inactive button" type="button" aria-label="Лайк"></button>
-                <span class="visually-hidden">Поставить лайк</span>
+                <button class="card__likes-button card__likes-button--inactive button" type="button">
+                  <span class="visually-hidden">
+                    Поставить лайк
+                  </span>
+                </button>
                 <span class="card__likes-number">
                   23
                 </span>
@@ -2006,7 +2018,8 @@
             <source type="image/webp" srcset="img/logo_mobile2.webp 1x, img/logo_mobile2@2x.webp 2x">
             <source media="(min-width: 1440px)" srcset="img/logo_desktop2.png 1x, img/logo_desktop2@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/logo_tablet2.png 1x, img/logo_tablet2@2x.png 2x">
-            <img class="footer__logo-img" src="img/logo_mobile2.png" srcset="img/logo_mobile2@2x.png 2x" alt="Синий логотип сервиса Погнали">
+            <img class="footer__logo-img" src="img/logo_mobile2.png" srcset="img/logo_mobile2@2x.png 2x" alt="Синий логотип сервиса Погнали" width="96"
+              height="15">
           </picture>
         </a>
         <ul class="footer__social social social--footer list">
