--- a/source/form.html
+++ b/source/form.html
@@ -1960,7 +1960,8 @@
             <source type="image/webp" srcset="img/logo_mobile2.webp 1x, img/logo_mobile2@2x.webp 2x">
             <source media="(min-width: 1440px)" srcset="img/logo_desktop2.png 1x, img/logo_desktop2@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/logo_tablet2.png 1x, img/logo_tablet2@2x.png 2x">
-            <img class="footer__logo-img" src="img/logo_mobile2.png" srcset="img/logo_mobile2@2x.png 2x" alt="Синий логотип сервиса Погнали">
+            <img class="footer__logo-img" src="img/logo_mobile2.png" srcset="img/logo_mobile2@2x.png 2x" alt="Синий логотип сервиса Погнали" width="96"
+              height="15">
           </picture>
         </a>
         <ul class="footer__social social social--footer list">
