--- a/source/blank.html
+++ b/source/blank.html
@@ -167,6 +167,7 @@
       </div>
     </div>
   </footer>
+  <script src="/node_modules/focus-visible/dist/focus-visible.min.js"></script>
   <script src="https://api-maps.yandex.ru/2.1/?apikey=fc4e44cb-c351-4462-93d4-686a12532872&lang=ru_RU"></script>
   <script src="js/script.min.js"></script>
 </body>
