--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,17 +41,17 @@
       <nav class="header__main-nav main-nav main-nav--theme-light">
         <ul class="main-nav__list list">
           <li class="main-nav__item">
-            <a class="main-nav__link" href="blank.html">
+            <a class="main-nav__link" href="blank.html" data-hover="О сервисе">
               О сервисе
             </a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="form.html">
+            <a class="main-nav__link" href="form.html" data-hover="Направления">
               Направления
             </a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link">
+            <a class="main-nav__link" data-hover="Попутчики">
               Попутчики
             </a>
           </li>
@@ -1419,6 +1419,7 @@
                       <span class="visually-hidden">
                         Автотранспорт
                       </span>
+                    </label>
                   </li>
                   <li class="transport__item transport__item--margin transport__item--inactive tooltip" data-tooltip="Велосипед">
                     <input class="transport__input visually-hidden" type="checkbox" name="bicycle" id="bicycle">
@@ -1440,6 +1441,7 @@
                       <span class="visually-hidden">
                         Пешком
                       </span>
+                    </label>
                   </li>
                 </ul>
               </div>
@@ -1624,7 +1626,7 @@
                   <source media="(min-width: 1440px)" srcset="img/demin-catalog_desktop.png 1x, img/demin-catalog_desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/demin-catalog_tablet.png 1x, img/demin-catalog_tablet@2x.png 2x">
                   <img class="card__img" src="img/demin-catalog_mobile.png" alt="Петя Демин с рыжей бородой в темных очках на фоне снежных холмов"
-                    srcset="img/demin-catalog_mobile@2x.png 2x" width="70px" height="70px">
+                    srcset="img/demin-catalog_mobile@2x.png 2x" width="70" height="70">
                 </picture>
               </a>
               <p class="card__tags">
@@ -1739,7 +1741,7 @@
                   <source media="(min-width: 1440px)" srcset="img/smolov-catalog_desktop.png 1x, img/smolov-catalog_desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/smolov-catalog_tablet.png 1x, img/smolov-catalog_tablet@2x.png 2x">
                   <img class="card__img" src="img/smolov-catalog_mobile.png" alt="Марк Смолов в татуировках, сидит на крыше машины с пачкой денег в руках"
-                    srcset="img/smolov-catalog_mobile@2x.png 2x" width="70px" height="70px">
+                    srcset="img/smolov-catalog_mobile@2x.png 2x" width="70" height="70">
                 </picture>
               </a>
               <p class="card__tags">
@@ -1860,7 +1862,7 @@
                   <source media="(min-width: 1440px)" srcset="img/rogovaya-catalog_desktop.png 1x, img/rogovaya-catalog_desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/rogovaya-catalog_tablet.png 1x, img/rogovaya-catalog_tablet@2x.png 2x">
                   <img class="card__img" src="img/rogovaya-catalog_mobile.png" alt="Петя Демин с рыжей бородой в темных очках на фоне снежных холмов"
-                    srcset="img/rogovaya-catalog_mobile@2x.png 2x" width="70px" height="70px">
+                    srcset="img/rogovaya-catalog_mobile@2x.png 2x" width="70" height="70">
                 </picture>
               </a>
               <p class="card__tags">
