--- a/source/index.html
+++ b/source/index.html
@@ -41,17 +41,17 @@
       <nav class="header__main-nav main-nav main-nav--theme-light">
         <ul class="main-nav__list list">
           <li class="main-nav__item">
-            <a class="main-nav__link" href="blank.html">
+            <a class="main-nav__link" href="blank.html" data-hover="О сервисе">
               О сервисе
             </a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="form.html">
+            <a class="main-nav__link" href="form.html" data-hover="Направления">
               Направления
             </a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="catalog.html">
+            <a class="main-nav__link" href="catalog.html" data-hover="Попутчики">
               Попутчики
             </a>
           </li>
